--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -768,7 +768,7 @@ footer {
 }
 
 .order-section {
-  background: url(../../../img/bg-form.png) top center/cover no-repeat;
+  background: url(/img/bg-form.png) top center/cover no-repeat;
   color: #fff;
 }
 
