--- a/styles/scss/blocks/form.scss
+++ b/styles/scss/blocks/form.scss
@@ -1,5 +1,5 @@
 .order-section {
-    background: url(../../../img/bg-form.png) top center / cover no-repeat;
+    background: url(/img/bg-form.png) top center / cover no-repeat;
     color: #fff;
 }
 
