--- a/styles/scss/blocks/hero.scss
+++ b/styles/scss/blocks/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: $blue url(../../../img/bg-hero.png) top center / cover no-repeat;
+    background: $blue url(../../img/bg-hero.png) top center / cover no-repeat;
     height: 100vh;
     min-height: 650px;
     color: $white;
