--- a/styles/scss/blocks/section.scss
+++ b/styles/scss/blocks/section.scss
@@ -41,7 +41,7 @@
     padding: 0 3%;
 
     &::before {
-        content: url("../../../img/decor/circles.svg");
+        content: url("../../img/decor/circles.svg");
         position: absolute;
         top: 60px;
         right: 0;
