--- a/styles/scss/blocks/hero.scss
+++ b/styles/scss/blocks/hero.scss
@@ -1,12 +1,12 @@
 .hero {
     background: $blue url(../../img/bg-hero.png) top center / cover no-repeat;
     color: $white;
-    padding-bottom: 68px;
+    padding-bottom: 4.25rem;
 }
 
 .herro__title-section {
     width: 50%;
-    margin-bottom: 60px;
+    margin-bottom: 3.75rem;
 }
 
 .hero__container {
@@ -18,13 +18,13 @@
 
 .hero__main-title {
     font-weight: bold;
-    font-size: 48px;
+    font-size: 3rem;
     text-transform: uppercase;
     line-height: 1.2;
 }
         
 .herro__title-desc {
-    font-size: 21px;
-    margin-bottom: 27px;
+    font-size: 1.31rem;
+    margin-bottom: 1.68rem;
 }
     
