--- a/styles/scss/layout/base.scss
+++ b/styles/scss/layout/base.scss
@@ -22,7 +22,7 @@ body {
     // flex-direction: column;
     position: relative;
     width: 100%;
-    min-width: $containerWidth + 20px;
+    min-width: $containerWidth + 1.25rem;
     min-height: 100%;
     overflow: hidden;
 }
