--- a/styles/scss/blocks/btn.scss
+++ b/styles/scss/blocks/btn.scss
@@ -1,9 +1,9 @@
 .btn {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 800;
     border-radius: 100px;
     line-height: 1;
-    padding: 22px 42px;
+    padding: 1.37rem 2.62rem;
     text-transform: uppercase;
     display: inline-block;
     border: none;
@@ -26,7 +26,7 @@
     &--theme--transparent {
         text-transform: inherit;
         font-weight: normal;
-        font-size: 18px;
+        font-size: 1.12rem;
         background: transparent;
         color: #fff;
 
