--- a/styles/scss/blocks/features.scss
+++ b/styles/scss/blocks/features.scss
@@ -1,11 +1,11 @@
 .features {
     display: flex;
     align-items: center;
-    margin-bottom: 70px;
+    margin-bottom: 4.37rem;
 }
 
 .features__item {
-    margin-right: 33px;
+    margin-right: 2.1rem;
 
     &:last-child {
         margin-right: 0;
@@ -18,11 +18,11 @@
 }
 
 .feature__icon {
-    width: 35px;
-    margin-right: 15px;
+    width: 2.19rem;
+    margin-right: 1rem;
 }
 
 .feature__text {
-    font-size: 16px;
-    max-width: 90px;
+    font-size: 1rem;
+    max-width: 5.62rem;
 }
