--- a/styles/scss/blocks/fixed__menu.scss
+++ b/styles/scss/blocks/fixed__menu.scss
@@ -6,14 +6,14 @@
 }
 
 .fixed__item {
-    margin-bottom: 5px;
+    margin-bottom: 0.31rem;
 }
 
 .fixed__link {
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
     border-radius: 50%;
-    border: 1px solid transparent;
+    border: 0.06rem solid transparent;
     display: block;
     position: relative;
 
@@ -24,8 +24,8 @@
     &::before {
         content: "";
         display: block;
-        width: 6px;
-        height: 6px;
+        width: 0.37rem;
+        height:0.37rem;
         border-radius: 50%;
         background: #fff;
         position: absolute;
