--- a/styles/scss/blocks/header.scss
+++ b/styles/scss/blocks/header.scss
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 24px;
-    margin-bottom: 65px;
+    padding-top: 1.5rem;
+    margin-bottom: 4.06rem;
 }
 
 .nav__list {
@@ -12,7 +12,7 @@
 }
 
 .nav__item {
-    margin-right: 20px;
+    margin-right: 1.25rem;
 
     &:last-child {
          margin-right: 0;
@@ -27,13 +27,13 @@
     display: flex;
     align-items: center;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 1.37rem;
 }
 
 .phone-number__icon-elem {
-    width: 12px;
-    height: 12px;
-    margin-right: 5px;
+    width: 0.75rem;
+    height: 0.75rem;
+    margin-right: 0.31rem;
 }
 
 
