--- a/styles/scss/blocks/reviews.scss
+++ b/styles/scss/blocks/reviews.scss
@@ -1,7 +1,7 @@
 .reviews__display {
     background: #F8FAF9;
-    padding: 42px 40px 42px;
-    margin-bottom: 15px;
+    padding: 2.62rem 2.5rem 2.62rem;
+    margin-bottom: 0.94rem;
 }
 
 .reviews__display-inner {
@@ -9,33 +9,33 @@
 }
 
 .reviews__avatar {
-    width: 253px;
-    height: 264px;
+    max-width: 15.81rem;
+    height: 16.5rem;
 }
 
 .reviews-avatar__img {
     object-fit: cover;
-    width: 100%;
+    max-width: 100%;
     height: 100%;
 }
 
 .reviews__content {
     flex: 1;
-    margin-left: 40px;
+    margin-left: 2.5rem;
 }
 
 .reviews__title {
     font-weight: bold;
-    font-size: 27px;
-    margin: 29px 0 16px;
+    font-size: 1.69rem;
+    margin: 1.81rem 0 1rem;
 }
 
 .reviews__text {
-    width: 463px;
-    font-size: 18px;
+    width: 28.93rem;
+    font-size: 1.12rem;
     line-height: 1.2;
     color: $gray;
-    margin-bottom: 28px;
+    margin-bottom: 1.75rem;
 }
 
 .reviews__author {
