--- a/styles/scss/blocks/interactive-avatar.scss
+++ b/styles/scss/blocks/interactive-avatar.scss
@@ -1,7 +1,7 @@
 .interactive-avatar {
-    width: 5rem;
-    height: 5rem;
-    border: 0.37rem solid transparent;
+    width: 85px;
+    height: 85px;
+    border: 6px solid transparent;
     border-radius: 50%;
     overflow: hidden;
     position: relative;
