--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -349,13 +349,26 @@ template {
           box-sizing: border-box;
 }
 
+html {
+  font-size: 18px;
+}
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 17px;
+  }
+}
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 16px;
+  }
+}
+
 html, body {
   height: 100%;
 }
 
 body {
   font-family: "Alegreya Sans", Arial, Helvetica, sans-serif;
-  font-size: 1.12rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
@@ -365,14 +378,15 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: 60rem;
   min-height: 100%;
   overflow: hidden;
 }
 
 .container {
+  position: relative;
   margin: 0 auto;
-  width: 58.75rem;
+  width: 95%;
+  max-width: 940px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -389,7 +403,6 @@ ul li {
 
 img {
   display: block;
-  max-width: 100%;
 }
 
 a {
@@ -411,12 +424,40 @@ footer {
 .hero {
   background: #1968B1 url(../../img/bg-hero.png) top center/cover no-repeat;
   color: #fff;
-  padding-bottom: 4.25rem;
+  padding-bottom: 68px;
 }
 
 .herro__title-section {
   width: 50%;
-  margin-bottom: 3.75rem;
+  margin-bottom: 60px;
+}
+@media screen and (max-width: 768px) {
+  .herro__title-section {
+    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .herro__icons-section {
+    display: none;
+  }
 }
 
 .hero__container {
@@ -439,18 +480,29 @@ footer {
   text-transform: uppercase;
   line-height: 1.2;
 }
+@media screen and (max-width: 768px) {
+  .hero__main-title {
+    letter-spacing: -2px;
+  }
+}
 
 .herro__title-desc {
-  font-size: 1.31rem;
-  margin-bottom: 1.68rem;
+  font-size: 21px;
+  margin-bottom: 27px;
+}
+@media screen and (max-width: 768px) {
+  .herro__title-desc {
+    padding: 0 20%;
+    margin-bottom: 11px;
+  }
 }
 
 .btn {
-  font-size: 1rem;
+  font-size: 0.8888888889rem;
   font-weight: 800;
-  border-radius: 100px;
+  border-radius: 5.5555555556rem;
   line-height: 1;
-  padding: 1.37rem 2.62rem;
+  padding: 1.2222222222rem 2.3333333333rem;
   text-transform: uppercase;
   display: inline-block;
   border: none;
@@ -470,7 +522,7 @@ footer {
 .btn--theme--transparent {
   text-transform: inherit;
   font-weight: normal;
-  font-size: 1.12rem;
+  font-size: 1rem;
   background: transparent;
   color: #fff;
 }
@@ -486,24 +538,40 @@ footer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 1.5rem;
-  margin-bottom: 4.06rem;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding-top: 24px;
+  margin-bottom: 65px;
+}
+
+.nav {
+  margin: 0 30px;
+  padding-top: 5px;
+}
+@media screen and (max-width: 768px) {
+  .nav {
+    display: none;
+  }
 }
 
 .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
 .nav__item {
-  margin-right: 1.25rem;
+  margin-right: 20px;
+  margin-bottom: 10px;
 }
 .nav__item:last-child {
   margin-right: 0;
@@ -511,6 +579,13 @@ footer {
 
 .nav__link {
   font-weight: bold;
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 768px) {
+  .phone__number.header__phone__number {
+    display: none;
+  }
 }
 
 .phone__number {
@@ -521,13 +596,22 @@ footer {
       -ms-flex-align: center;
           align-items: center;
   font-weight: bold;
-  font-size: 1.37rem;
+  font-size: 22px;
 }
 
 .phone-number__icon-elem {
-  width: 0.75rem;
-  height: 0.75rem;
-  margin-right: 0.31rem;
+  width: 12px;
+  height: 12px;
+  margin-right: 5px;
+}
+
+.phone-number__icon {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.phone-number__text {
+  white-space: nowrap;
 }
 
 .features {
@@ -537,11 +621,11 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 4.37rem;
+  margin-bottom: 67px;
 }
 
 .features__item {
-  margin-right: 2.1rem;
+  margin-right: 34px;
 }
 .features__item:last-child {
   margin-right: 0;
@@ -557,18 +641,18 @@ footer {
 }
 
 .feature__icon {
-  width: 2.19rem;
-  margin-right: 1rem;
+  width: 35px;
+  margin-right: 16px;
 }
 
 .feature__text {
-  font-size: 1rem;
-  max-width: 5.62rem;
+  font-size: 16px;
+  max-width: 90px;
 }
 
 .section {
   height: 100vh;
-  min-width: 40.62rem;
+  min-width: 650px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -583,8 +667,8 @@ footer {
 
 .section__title {
   font-weight: bold;
-  font-size: 3rem;
-  margin-bottom: 2rem;
+  font-size: 48px;
+  margin-bottom: 32px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -592,11 +676,11 @@ footer {
 /**/
 .headline {
   text-align: center;
-  margin-bottom: 3.12rem;
+  margin-bottom: 52px;
 }
 
 .headline__title {
-  margin-bottom: 1.06rem;
+  margin-bottom: 20px;
 }
 
 .headline__subtitle {
@@ -626,10 +710,15 @@ footer {
 .benefits__item::before {
   content: url("../../img/decor/circles.svg");
   position: absolute;
-  top: 3.75rem;
+  top: 60px;
   right: 0;
   -webkit-transform: translateX(50%);
           transform: translateX(50%);
+}
+@media screen and (max-width: 768px) {
+  .benefits__item::before {
+    display: none;
+  }
 }
 .benefits__item:first-child {
   padding-left: 0;
@@ -649,18 +738,18 @@ footer {
 
 .benefit__img-wrapper {
   display: inline-block;
-  width: 6rem;
-  height: 6rem;
+  width: 128px;
+  height: 128px;
   position: relative;
   background: #F2F5F4;
   border-radius: 50%;
   overflow: hidden;
-  margin-bottom: 1.25rem;
+  margin-bottom: 20px;
 }
 
 .benefit__icon {
-  width: 4.25rem;
-  height: 4.25rem;
+  width: 68px;
+  height: 68px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -670,8 +759,8 @@ footer {
 
 .benefit__title {
   font-weight: bold;
-  font-size: 1.69rem;
-  margin-bottom: 1.25rem;
+  font-size: 27px;
+  margin-bottom: 20px;
 }
 
 .benefit__desc {
@@ -679,10 +768,17 @@ footer {
   color: #666666;
 }
 
+.reviews-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 180px;
+}
+
 .reviews__display {
   background: #F8FAF9;
-  padding: 2.62rem 2.5rem 2.62rem;
-  margin-bottom: 0.94rem;
+  padding: 42px 40px 42px;
+  margin-bottom: 5px;
 }
 
 .reviews__display-inner {
@@ -690,38 +786,54 @@ footer {
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .reviews__display-inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 
 .reviews__avatar {
-  max-width: 15.81rem;
-  height: 16.5rem;
+  max-width: 253px;
+  height: 270px;
+}
+@media screen and (max-width: 768px) {
+  .reviews__avatar {
+    max-width: 130px;
+    height: 130px;
+  }
 }
 
 .reviews-avatar__img {
   -o-object-fit: cover;
      object-fit: cover;
   max-width: 100%;
-  height: 100%;
 }
 
 .reviews__content {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-left: 2.5rem;
+  margin-left: 40px;
 }
 
 .reviews__title {
   font-weight: bold;
-  font-size: 1.69rem;
-  margin: 1.81rem 0 1rem;
+  font-size: 27px;
+  margin: 29px 0 16px;
 }
 
 .reviews__text {
-  width: 28.93rem;
-  font-size: 1.12rem;
+  font-size: 18px;
   line-height: 1.2;
   color: #666666;
-  margin-bottom: 1.75rem;
+  margin-bottom: 50px;
 }
 
 .reviews__author {
@@ -742,9 +854,9 @@ footer {
 }
 
 .interactive-avatar {
-  width: 5rem;
-  height: 5rem;
-  border: 0.37rem solid transparent;
+  width: 85px;
+  height: 85px;
+  border: 6px solid transparent;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
@@ -776,7 +888,12 @@ footer {
 }
 
 .title__form {
-  margin-bottom: 3.93rem;
+  margin-bottom: 3.5rem;
+}
+@media screen and (max-width: 768px) {
+  .title__form {
+    margin-bottom: 1.8333333333rem;
+  }
 }
 
 .form {
@@ -784,33 +901,52 @@ footer {
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 16%;
+  }
+}
 
 .form__col {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 1.87rem;
+  margin-right: 1.6666666667rem;
 }
 .form__col:last-child {
   margin-right: 0;
 }
+@media screen and (max-width: 768px) {
+  .form__col {
+    margin-right: 0;
+  }
+}
 
 .indent__row {
-  margin-bottom: 1.37rem;
+  margin-bottom: 1.2222222222rem;
 }
 
 .form__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 0.75rem;
+  margin-bottom: 0.6666666667rem;
+}
+@media screen and (max-width: 768px) {
+  .form__row {
+    margin-bottom: 1.3333333333rem;
+  }
 }
 
 .form__block {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 1.06rem;
+  margin-right: 0.9444444444rem;
 }
 .form__block:last-child {
   margin-right: 0;
@@ -818,17 +954,27 @@ footer {
 
 .form__input {
   width: 100%;
-  padding: 1.12rem 0.75rem;
-  border-radius: 0.31rem;
-  border: solid 3px transparent;
+  padding: 1rem 0.6666666667rem;
+  border-radius: 0.2777777778rem;
+  border: solid 0.1666666667rem transparent;
 }
 .form__input--textarea {
-  height: 9.5rem;
+  height: 8.4444444444rem;
   resize: none;
+}
+@media screen and (max-width: 768px) {
+  .form__input--textarea {
+    height: 5.1111111111rem;
+  }
 }
 .form__input:focus {
   border-color: #FEDB3F;
   outline: none;
+}
+@media screen and (max-width: 768px) {
+  .form__input {
+    padding: 0.3888888889rem 0.5555555556rem;
+  }
 }
 
 .form__controls {
@@ -837,11 +983,22 @@ footer {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 1.25rem;
+  margin-bottom: 1.1111111111rem;
 }
 
 .form__controls-indent {
-  margin-bottom: 2.81rem;
+  margin-bottom: 2.5rem;
+}
+
+@media screen and (max-width: 768px) {
+  .form__btns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .radio {
@@ -856,10 +1013,10 @@ footer {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  margin-right: 0.94rem;
+  margin-right: 15px;
 }
 .radio--checkbox .radio__visible {
-  border-radius: 0.31rem;
+  border-radius: 5px;
 }
 .radio--checkbox .radio__visible::before {
   background: url(../../../img/icons/tick.png) center center no-repeat;
@@ -873,8 +1030,8 @@ footer {
 }
 
 .radio__visible {
-  width: 1.56rem;
-  height: 1.56rem;
+  width: 25px;
+  height: 25px;
   position: relative;
   border-radius: 50%;
   background: #fff;
@@ -882,8 +1039,8 @@ footer {
 }
 .radio__visible::before {
   content: "";
-  width: 0.81rem;
-  height: 0.81rem;
+  width: 13px;
+  height: 13px;
   border-radius: 50%;
   background: #FEDB3F;
   position: absolute;
@@ -902,14 +1059,14 @@ footer {
 }
 
 .fixed__item {
-  margin-bottom: 0.31rem;
+  margin-bottom: 5px;
 }
 
 .fixed__link {
-  width: 1rem;
-  height: 1rem;
+  width: 16px;
+  height: 16px;
   border-radius: 50%;
-  border: 0.06rem solid transparent;
+  border: 1px solid transparent;
   display: block;
   position: relative;
 }
@@ -919,8 +1076,8 @@ footer {
 .fixed__link::before {
   content: "";
   display: block;
-  width: 0.37rem;
-  height: 0.37rem;
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
   background: #fff;
   position: absolute;
@@ -930,39 +1087,30 @@ footer {
           transform: translate(-50%, -50%);
 }
 
-.wrapper {
-  min-width: 0;
+.hamburger {
+  width: 26px;
+  height: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: none;
 }
-
-.container {
-  width: auto;
-  max-width: 60rem;
-}
-
-html {
-  font-size: 16px;
-}
-
-@media (max-width: 768px) {
-  html {
-    font-size: 14px;
-  }
-
-  .container {
-    max-width: 450px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-
-  .reviews__display-inner {
-    width: 100%;
+@media screen and (max-width: 768px) {
+  .hamburger {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
   }
 }
-@media (max-width: 480px) {
-  html {
-    font-size: 12px;
-  }
+
+.hamburger__plank {
+  display: block;
+  background: #fff;
+  height: 4px;
+  border-radius: 10px;
 }
 /*# sourceMappingURL=main.css.map */
