--- a/styles/scss/blocks/header.scss
+++ b/styles/scss/blocks/header.scss
@@ -1,18 +1,30 @@
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding-top: 1.5rem;
-    margin-bottom: 4.06rem;
+    align-items: flex-start;
+    padding-top: 24px;
+    margin-bottom: 65px;
+}
+
+.nav {
+    margin: 0 30px;
+    padding-top: 5px;
+
+    @include tablets {
+        display: none;
+    }
 }
 
 .nav__list {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
 }
 
 .nav__item {
-    margin-right: 1.25rem;
+    margin-right: 20px;
+    margin-bottom: 10px;
 
     &:last-child {
          margin-right: 0;
@@ -21,19 +33,34 @@
 
 .nav__link {
     font-weight: bold;
+    white-space: nowrap;
+}
+
+.phone__number.header__phone__number {
+    @include tablets {
+        display: none;
+    }
 }
 
 .phone__number {
     display: flex;
     align-items: center;
     font-weight: bold;
-    font-size: 1.37rem;
+    font-size: 22px;
 }
 
 .phone-number__icon-elem {
-    width: 0.75rem;
-    height: 0.75rem;
-    margin-right: 0.31rem;
+    width: 12px;
+    height: 12px;
+    margin-right: 5px;
+}
+
+.phone-number__icon {
+    flex-shrink: 0;
+}
+
+.phone-number__text {
+    white-space: nowrap;
 }
 
 
