--- a/styles/scss/blocks/hero.scss
+++ b/styles/scss/blocks/hero.scss
@@ -1,12 +1,28 @@
 .hero {
     background: $blue url(../../img/bg-hero.png) top center / cover no-repeat;
     color: $white;
-    padding-bottom: 4.25rem;
+    padding-bottom: 68px;
 }
 
 .herro__title-section {
     width: 50%;
-    margin-bottom: 3.75rem;
+    margin-bottom: 60px;
+
+    @include tablets {
+       width: 100%;
+       flex: 1;
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+       text-align: center;
+    }
+}
+
+.herro__icons-section {
+    @include tablets {
+        display: none;
+    }
 }
 
 .hero__container {
@@ -21,10 +37,19 @@
     font-size: 3rem;
     text-transform: uppercase;
     line-height: 1.2;
+
+    @include tablets {
+        letter-spacing: -2px;
+    }
 }
         
 .herro__title-desc {
-    font-size: 1.31rem;
-    margin-bottom: 1.68rem;
+    font-size: 21px;
+    margin-bottom: 27px;
+
+    @include tablets {
+        padding: 0 20%;
+        margin-bottom: 11px;
+    }
 }
     
