--- a/styles/scss/blocks/reviews.scss
+++ b/styles/scss/blocks/reviews.scss
@@ -1,41 +1,56 @@
+.reviews-section {
+    display: flex;
+    margin-bottom: 180px;
+}
+
 .reviews__display {
     background: #F8FAF9;
-    padding: 2.62rem 2.5rem 2.62rem;
-    margin-bottom: 0.94rem;
+    padding: 42px 40px 42px;
+    margin-bottom: 5px;
 }
 
 .reviews__display-inner {
     display: flex;
+
+    @include tablets {
+       flex-direction: column; 
+       text-align: center;
+       align-items: center;
+    }
 }
 
 .reviews__avatar {
-    max-width: 15.81rem;
-    height: 16.5rem;
+    max-width: 253px;
+    height: 270px;
+
+    @include tablets {
+        max-width: 130px;
+        height: 130px;
+     }
 }
 
 .reviews-avatar__img {
     object-fit: cover;
     max-width: 100%;
-    height: 100%;
+    // height: 100%;
 }
 
 .reviews__content {
     flex: 1;
-    margin-left: 2.5rem;
+    margin-left: 40px;
 }
 
 .reviews__title {
     font-weight: bold;
-    font-size: 1.69rem;
-    margin: 1.81rem 0 1rem;
+    font-size: 27px;
+    margin: 29px 0 16px;
 }
 
 .reviews__text {
-    width: 28.93rem;
-    font-size: 1.12rem;
+    font-size: 18px;
     line-height: 1.2;
     color: $gray;
-    margin-bottom: 1.75rem;
+    margin-bottom: 50px;
 }
 
 .reviews__author {
