--- a/styles/scss/blocks/section.scss
+++ b/styles/scss/blocks/section.scss
@@ -1,6 +1,6 @@
 .section {
     height: 100vh;
-    min-width: 40.62rem;
+    min-width: 650px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,8 +8,8 @@
 
 .section__title {
     font-weight: bold;
-    font-size: 3rem;
-    margin-bottom: 2rem;
+    font-size: 48px;
+    margin-bottom: 32px;
     text-align: center;
     text-transform: uppercase;
 }
@@ -17,11 +17,11 @@
 /**/
 .headline {
     text-align: center;  
-    margin-bottom: 3.12rem;
+    margin-bottom: 52px;
 }
 
 .headline__title {
-    margin-bottom: 1.06rem;
+    margin-bottom: 20px;
 }
 
 .headline__subtitle {
@@ -46,9 +46,13 @@
     &::before {
         content: url("../../img/decor/circles.svg");
         position: absolute;
-        top: 3.75rem;
+        top: 60px;
         right: 0;
         transform: translateX(50%);
+
+        @include tablets {
+            display: none;
+        }
     }
 
     &:first-child {
@@ -73,18 +77,18 @@
 
 .benefit__img-wrapper {
     display: inline-block;
-    width: 6rem;
-    height: 6rem;
+    width: 128px;
+    height: 128px;
     position: relative;
     background: #F2F5F4;
     border-radius: 50%;
     overflow: hidden;
-    margin-bottom: 1.25rem;
+    margin-bottom: 20px;
 }
 
 .benefit__icon {
-    width: 4.25rem;
-    height: 4.25rem;
+    width: 68px;
+    height: 68px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -93,8 +97,8 @@
 
 .benefit__title {
     font-weight: bold;
-    font-size: 1.69rem;
-    margin-bottom: 1.25rem;
+    font-size: 27px;
+    margin-bottom: 20px;
 }
 
 .benefit__desc {
