--- a/styles/scss/layout/base.scss
+++ b/styles/scss/layout/base.scss
@@ -4,13 +4,24 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: $baseFontSize;
+
+    @include tablets {
+        font-size: $baseFontSize - 1px;
+    }
+
+    @include phones {
+        font-size: $baseFontSize - 2px;
+    }
+}
+
 html, body {
     height: 100%;
 }
 
 body {
     font-family: 'Alegreya Sans', Arial, Helvetica, sans-serif;
-    font-size: $baseFontSize;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     position: relative;
@@ -18,22 +29,17 @@ body {
 }
 
 .wrapper {
-    // display: flex;
-    // flex-direction: column;
     position: relative;
     width: 100%;
-    min-width: $containerWidth + 1.25rem;
     min-height: 100%;
     overflow: hidden;
 }
 
-// .wrapper__content {
-//     // flex: 1;
-// }
-
 .container {
+    position: relative;
     margin: 0 auto;
-    width: $containerWidth;
+    width: 95%;
+    max-width: $containerWidth;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -50,7 +56,6 @@ ul li {
 
 img {
     display: block;
-    max-width: 100%;
 }
 
 a {
